tests/pos/misc/float-00.ts

/*@ foo :: (x:number) => {number | true} */
function foo(x:number):number { 
    return x + 0.5;
}