tests/neg/objects/update-01.ts

/*@ foo :: ({x: { v: number | v > 10 } }) => { void | true } */ 
function foo(o) {
  o.x = 5;
}
